No longer cloning on drag, and adjusting z-index, so dragging is always on top and the tile disappears from it's original place

--- a/mainsite/static/css/pgtile.css
+++ b/mainsite/static/css/pgtile.css
@@ -12,6 +12,7 @@
 .pgtile-div {
 	position: absolute;
 	top: 0px;
+	z-index: 10;
 }
 
 .paigow321-deal {
